--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -69,6 +69,10 @@
                         font-weight: bold;
                         cursor: pointer;
                         margin-top: 10px;
+
+                        &:disabled {
+                            cursor: no-drop;
+                        }
                     }
                 }
             }
